	* /gnome-cmd-data.cc:
	* /gnome-cmd-data.h:
	* /gnome-cmd-file-list.cc:
	* /gnome-cmd-file-selector.cc:
	* /gnome-cmd-main-menu.cc:
	* /gnome-cmd-main-win.cc:
	* /gnome-cmd-options-dialog.cc:
	* /gnome-cmd-patternsel-dialog.cc:
	* /gnome-cmd-search-dialog.cc:
	* /gnome-cmd-user-actions.cc:
	GnomeCmdData: more C++ rework

	* src/imageloader.h:
	Removal of root-dir icon - removed forgotten enum

2008-09-07  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-delete-dialog.cc
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-prepare-copy-dialog.cc:
	* src/gnome-cmd-prepare-move-dialog.cc:
	Convert GnomeCmdData struct into C++ class

2008-09-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/imageloader.cc:
	Removal of root-dir icon

2008-09-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	GnomeCmdFileList: do not allocate dynamically shown_files

	* src/gnome-cmd-file.h:
	* src/gnome-cmd-file-list.cc:
	Move gnome_cmd_get_collation_fname() to gnome-cmd-file.h

	* src/gnome-cmd-file-collection.cc:
	* src/gnome-cmd-file-collection.h:
	GnomeCmdFileCollection::remove(): return TRUE if success, FALSE otherwise

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-quicksearch-popup.cc:
	GnomeCmdFileCollection: get_all_files() -> get_visible_files()

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Visibility of connection/device list is configurable now

2008-09-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fix for memory leak

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-selector.cc: