@@ -6,6 +6,7 @@ Bug fixes:
  * Fixed problem #536446 (file name not focused for in-place renaming)
  * Fixed problem #548948 (crash when home directory contains non-UTF8 characters)
  * Fixed problem #548961 (support for input method when rename or quicksearch)
+ * Fixed problem with setting equal pane size in horizontal mode
 
 New features:
  * Support for PDF metatags in advanced file rename templates
