@@ -16,6 +16,9 @@
 	* src/imageloader.h:
 	Removal of root-dir icon - removed forgotten enum
 
+	* src/gnome-cmd-main-win.cc:
+	Fix for 'equal pane size' in horizontal mode
+
 2008-09-07  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-data.cc:
